--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <table style="width: auto" id="result-table" class="center">
     <tr>
         <th>Driver</th>
+        <th>Tyre</th>
         <th>Stint 1</th>
         <th>Stint 2</th>
         <th>Stint 3</th>
@@ -21,6 +22,7 @@
     </tr>
     <tr style="background-color:#F91536">
         <td>Sainz</td>
+        <td id="driver-1-tyre"></td>
         <td class="stint" id="driver-1-stint-1"></td>
         <td class="stint" id="driver-1-stint-2"></td>
         <td class="stint" id="driver-1-stint-3"></td>
@@ -29,6 +31,7 @@
     </tr>
     <tr style="background-color:#F91536">
         <td>Leclerc</td>
+        <td id="driver-2-tyre"></td>
         <td class="stint" id="driver-2-stint-1"></td>
         <td class="stint" id="driver-2-stint-2"></td>
         <td class="stint" id="driver-2-stint-3"></td>
@@ -37,6 +40,7 @@
     </tr>
     <tr style="background-color:#358C75">
         <td>Alonso</td>
+        <td id="driver-3-tyre"></td>
         <td class="stint" id="driver-3-stint-1"></td>
         <td class="stint" id="driver-3-stint-2"></td>
         <td class="stint" id="driver-3-stint-3"></td>
@@ -45,6 +49,7 @@
     </tr>
     <tr style="background-color:#6CD3BF">
         <td>Hamilton</td>
+        <td id="driver-4-tyre"></td>
         <td class="stint" id="driver-4-stint-1"></td>
         <td class="stint" id="driver-4-stint-2"></td>
         <td class="stint" id="driver-4-stint-3"></td>
@@ -56,6 +61,7 @@
 <button onclick="simulateStint()">Simulate Stint</button>
 
 <script src="app.js"></script>
+<script src="tyres.js"></script>
 </body>
 </html>
 
